# spi2can

./: CMakeLists.txt  README.md
cicd/: Jenkinsfile
src/: .clang-format  CanSocket.cpp  CanSocket.h  ISpidevSpi.h  ISysfsGpio.h  Spi2Can.cpp  Spi2Can.h  SpidevSpi.cpp  SpidevSpi.h  SysfsGpio.cpp  SysfsGpio.h  main.cpp
test/simulation/: CMakeLists.txt
test/simulation/src/: SimSpidevSpi.cpp  SimSpidevSpi.h  SimSpidevSpiTx.cpp  SimSpidevSpiTx.h  SimSysfsGpio.cpp  SimSysfsGpio.h  main.cpp
